--- a/app/export/index.html
+++ b/app/export/index.html
@@ -53,7 +53,16 @@
 				<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 mt-20 mb-20">
 					<h2 class="pt-5">Save exported code(s)</h2>
 					<h3>Save your exported data as a file to use it elsewhere.</h3>
-					<div class="flex flex-row justify-center gap-3 flex-wrap">
+					<div class="flex flex-col justify-center gap-3 pb-3">
+						<div>
+							<button class="buttoni" id="but1" onclick="newSaveFile()">
+								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7v8a2 2 0 002 2h6M8 7V5a2 2 0 012-2h4.586a1 1 0 01.707.293l4.414 4.414a1 1 0 01.293.707V15a2 2 0 01-2 2h-2M8 7H6a2 2 0 00-2 2v10a2 2 0 002 2h8a2 2 0 002-2v-2" />
+								</svg>
+								Save as .authme
+							</button>
+							<h5 class="text-3 m-3">The new way to import for Authme 3.</h5>
+						</div>
 						<div>
 							<button class="buttoni" id="but1" onclick="saveFile()">
 								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
