Enable in options #161

--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -963,11 +963,25 @@
 							</div>
 
 							<h4 class="text-popup-yellow font-bold mb-0">This feature is WIP! It might be unstable or buggy!</h4>
-							<!-- 
+
 							<br />
 							<hr />
-							<h4 class="text-popup-red font-bold mb-0">This feature is WIP! Use it at your own risk!</h4> 
-							-->
+
+							<div class="relative inline-block">
+								<h3>Import screen capture</h3>
+								<h4>You can choose how to sort the codes. By default codes are sorted by importing order.</h4>
+							</div>
+
+							<div class="flex justify-center items-center w-72 h-[68px] bg-white mx-auto rounded-full">
+								<a href="#" onclick="screenCapture()">
+									<div class="pointer-events-none relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
+										<input tabindex="-1" id="tgl8" type="checkbox" class="toggle" />
+										<label for="tgl8" class="toggle-bg block overflow-hidden h-6 rounded-full bg-white cursor-pointer"></label></div
+								></a>
+								<span id="tgt8" class="text-black text-xl">-</span>
+							</div>
+
+							<h4 class="text-popup-red font-bold mb-0">This feature is WIP! Use it at your own risk!</h4>
 						</div>
 					</div>
 				</div>
