New title bar  #159

--- a/app/application/index.html
+++ b/app/application/index.html
@@ -155,7 +155,7 @@
 		</div>
 
 		<!-- content -->
-		<div class="bg-gray-700 w-3/5 mx-auto mt-20 mb-60 rounded-2xl relative text-center content">
+		<div class="bg-gray-700 w-3/5 mx-auto mt-20 mb-60 rounded-2xl relative text-center content p-1">
 			<h1 class="h1 mb-5">Authme</h1>
 			<div class="mx-auto rounded-2xl bg-gray-800 w-2/3" id="choose">
 				<h3 class="pt-3">Please choose your import file!</h3>
