--- a/app/confirm/index.html
+++ b/app/confirm/index.html
@@ -21,7 +21,7 @@
 		</div>
 
 		<!-- content -->
-		<div class="bg-gray-700 w-3/5 m-auto mt-60 mb-32 rounded-2xl relative text-center">
+		<div class="bg-gray-700 w-3/5 m-auto mt-60 mb-32 rounded-2xl relative text-center p-1">
 			<h1>Authme</h1>
 			<div class="mx-auto rounded-2xl mb-12 bg-gray-800 w-2/3" id="choose">
 				<h3 class="pt-3">Welcome back!</h3>
