--- a/app/edit/index.html
+++ b/app/edit/index.html
@@ -34,7 +34,7 @@
 		</div>
 
 		<!-- content -->
-		<div class="bg-gray-700 w-3/5 m-auto mt-20 mb-60 rounded-2xl relative text-center">
+		<div class="bg-gray-700 w-3/5 m-auto mt-20 mb-60 rounded-2xl relative text-center p-1">
 			<!-- rollback -->
 			<div class="mx-auto rounded-2xl hidden bg-gray-800 w-2/3 rollback mt-20">
 				<h2 id="rollbackText" class="pt-5">Rollback</h2>
