--- a/app/landing/index.html
+++ b/app/landing/index.html
@@ -21,7 +21,7 @@
 		</div>
 
 		<!-- content -->
-		<div class="bg-gray-700 w-3/5 m-auto mt-40 mb-60 rounded-2xl relative text-center">
+		<div class="bg-gray-700 w-3/5 m-auto mt-40 mb-60 rounded-2xl relative text-center p-1">
 			<h1>Authme</h1>
 			<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 mb-16" id="choose">
 				<h3 class="pt-3">Welcome to Authme!</h3>
