--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -14,7 +14,7 @@
 	<body>
 		<div class="h-screen flex">
 			<!-- sidebar -->
-			<div class="h-screen bg-gray-900 flex flex-col justify-between overflow-auto">
+			<div class="h-screen bg-gray-900 flex flex-col justify-between overflow-visible">
 				<div class="flex flex-col">
 					<div class="mb-1 mt-5 mr-4 ml-4">
 						<button id="setting " class="buttonm settings" onclick="menu(event, 'setting')">
@@ -59,7 +59,7 @@
 							Feedback
 						</button>
 					</div>
-					<div class="mb-5 mt-1 mr-4 ml-4">
+					<div class="mb-12 mt-1 mr-4 ml-4">
 						<button class="buttonm" onclick="about()">
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
