--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -513,7 +513,7 @@
 							</div>
 							<div class="flex flex-col md:w-4/5 lg:w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
 								<div class="flex justify-center items-center">
-									<h3>Zoom in</h3>
+									<h3>Zoom In</h3>
 								</div>
 								<div class="flex justify-center items-center">
 									<input class="input" disabled type="text" id="hk13_input" />
@@ -540,7 +540,7 @@
 							</div>
 							<div class="flex flex-col md:w-4/5 lg:w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
 								<div class="flex justify-center items-center">
-									<h3>Zoom out</h3>
+									<h3>Zoom Out</h3>
 								</div>
 								<div class="flex justify-center items-center">
 									<input class="input" disabled type="text" id="hk14_input" />
@@ -567,7 +567,7 @@
 							</div>
 							<div class="flex flex-col md:w-4/5 lg:w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
 								<div class="flex justify-center items-center">
-									<h3>Edit codes</h3>
+									<h3>Edit Codes</h3>
 								</div>
 								<div class="flex justify-center items-center">
 									<input class="input" disabled type="text" id="hk3_input" />
@@ -675,7 +675,7 @@
 							</div>
 							<div class="flex flex-col md:w-4/5 lg:w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
 								<div class="flex justify-center items-center">
-									<h3>Release notes</h3>
+									<h3>Release Notes</h3>
 								</div>
 								<div class="flex justify-center items-center">
 									<input class="input" disabled type="text" id="hk6_input" />
@@ -702,7 +702,7 @@
 							</div>
 							<div class="flex flex-col md:w-4/5 lg:w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
 								<div class="flex justify-center items-center">
-									<h3>Support development</h3>
+									<h3>Support Development</h3>
 								</div>
 								<div class="flex justify-center items-center">
 									<input class="input" disabled type="text" id="hk7_input" />
@@ -729,7 +729,7 @@
 							</div>
 							<div class="flex flex-col md:w-4/5 lg:w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
 								<div class="flex justify-center items-center">
-									<h3>Show licenses</h3>
+									<h3>Show Licenses</h3>
 								</div>
 								<div class="flex justify-center items-center">
 									<input class="input" disabled type="text" id="hk9_input" />
