--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -310,8 +310,8 @@
 
 						<!-- codes -->
 						<div id="codes" class="tabcontent part hidden">
-							<h3>Show 2FA descriptions</h3>
-							<h4>The saved 2FA descriptions will be visible. You can copy it after clicking it.</h4>
+							<h3>Codes description</h3>
+							<h4>The saved codes description will be visible. You can copy it after clicking it.</h4>
 							<div class="flex justify-center items-center w-72 h-[68px] bg-white mx-auto rounded-full">
 								<a href="#" onclick="names()">
 									<div class="pointer-events-none relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
@@ -323,7 +323,7 @@
 							<br />
 							<hr />
 							<h3>Blur codes</h3>
-							<h4>Blurs the 2FA codes. You can still copy it or hover over it to reveal.</h4>
+							<h4>Blur the saved codes. You can still copy it or hover over it to reveal.</h4>
 							<div class="flex justify-center items-center w-72 h-[68px] bg-white mx-auto rounded-full">
 								<a href="#" onclick="reveal()">
 									<div class="pointer-events-none relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
@@ -334,8 +334,8 @@
 							</div>
 							<br />
 							<hr />
-							<h3>Save search history</h3>
-							<h4>Keep your search history. Works even after restart.</h4>
+							<h3>Search history</h3>
+							<h4>Save the latest code you searched for. Works even after restart.</h4>
 							<div class="flex justify-center items-center w-72 h-[68px] bg-white mx-auto rounded-full">
 								<a href="#" onclick="results()">
 									<div class="pointer-events-none relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
