--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -943,7 +943,7 @@
 
 							<div class="relative inline-block">
 								<h3>Import screen capture</h3>
-								<h4>You can choose how to sort the codes. By default codes are sorted by importing order.</h4>
+								<h4>You can turn on Import screen capture. You can scan QR codes from your screen.</h4>
 							</div>
 
 							<div class="flex justify-center items-center w-72 h-[68px] bg-white mx-auto rounded-full">
